Fix config bug and add intro content

--- a/episodes/introduction.Rmd
+++ b/episodes/introduction.Rmd
@@ -1,113 +1,95 @@
 ---
-title: "Using RMarkdown"
+title: "Introduction"
 teaching: 10
 exercises: 2
+editor_options: 
+  markdown: 
+    wrap: 72
 ---
 
-:::::::::::::::::::::::::::::::::::::: questions 
+::: questions
+-   Why should I learn to monitor performance of my Slurm jobs?
+-   What other features of Slurm can I use to help with my workflows?
+:::
 
-- How do you write a lesson using R Markdown and `{sandpaper}`?
+::: objectives
+-   Understand why jobs should be monitored carefully.
+-   Understand how Slurm's additional features can alleviate pain
+    points.
+:::
 
-::::::::::::::::::::::::::::::::::::::::::::::::
+## A Common Story
 
-::::::::::::::::::::::::::::::::::::: objectives
+Imagine you're a researcher who has spent a good chunk of their time in
+research in the lab, or you're a researcher who *does* do a fair amount
+of computational research, but you've only been using laptop so far. And
+one day, you join a new project that suddenly has a HUGE amount of data
+to process - an amount that would take your laptop *years* to get
+through!
 
-- Explain how to use markdown with the new lesson template
-- Demonstrate how to include pieces of code, figures, and nested challenge blocks
+Your PI has suggested that you give WEHI's Milton HPC facility a go.
+Milton has thousands of CPU cores, petabytes of storage, and terrabytes
+of RAM to use! That would make processing this huge dataset a breeze!
 
-::::::::::::::::::::::::::::::::::::::::::::::::
+Since that suggestion, you've attended some introductory courses and
+maybe you've found other researchers who know a bit about using Milton,
+and you've managed to get started with using the Slurm scheduler and
+submitting jobs.
 
-## Introduction
+But up until now, you've just been doing things in ways that *works*,
+but you might be wondering whether yours jobs are setup to run
+optimally. Maybe you've received emails from grumpy sysadmins about
+inappropriately using resources. Or maybe you want to know how to make
+it easier to more easily submit many similar jobs or jobs that depend on
+each other.
 
-This is a lesson created via The Carpentries Workbench. It is written in
-[Pandoc-flavored Markdown](https://pandoc.org/MANUAL.txt) for static files and
-[R Markdown][r-markdown] for dynamic files that can render code into output. 
-Please refer to the [Introduction to The Carpentries 
-Workbench](https://carpentries.github.io/sandpaper-docs/) for full documentation.
+::: challenge
+## How would you do it?
 
-What you need to know is that there are three sections required for a valid
-Carpentries lesson template:
+Let's imagine you have hundreds of files that you need to run the same
+command on. You know that Slurm can process that all in parallel, so how
+would you go about submitting those jobs at first?
+:::
 
- 1. `questions` are displayed at the beginning of the episode to prime the
-    learner for the content.
- 2. `objectives` are the learning objectives for an episode displayed with
-    the questions.
- 3. `keypoints` are displayed at the end of the episode to reinforce the
-    objectives.
+::: solution
+If you're new to Linux, you might've thought about submitting these jobs
+manually! If you've done a bit of scripting, you might've thought to use
+script arguments and a for loop to submit all the jobs. This *works*,
+but Slurm also has **job arrays**! As we'll see in a later episode, job
+arrays are a Slurm feature that can help you submit many similar jobs in
+one go!
+:::
 
-:::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::: instructor
+::: challenge
+## How would you do it?
 
-Inline instructor notes can help inform instructors of timing challenges
-associated with the lessons. They appear in the "Instructor View"
+What about workflows that happen in steps and where these steps have
+different resource requirements? Like for example, one step is
+multi-threaded, so the job should request many CPUs; but the next step
+is single-threaded only?
+:::
 
-::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
+::: solution
+If the second step is short, you might put the two steps into a single
+Slurm job. But what if the second step takes a large amount of time?
+Putting these two steps in the same job, could unfairly occupy resources
+others could use!
 
-::::::::::::::::::::::::::::::::::::: challenge 
+You might also do this manually i.e., wait for the first step to finish,
+and then submit the second job afterward.
 
-## Challenge 1: Can you do it?
+Slurm also has job dependency features that you can take advantage of to
+help with pipelines. We'll cover this in a future episode!
+:::
 
-What is the output of this command?
+::: instructor
+The challenges can be done together with the researchers input.
+:::
 
-```r
-paste("This", "new", "lesson", "looks", "good")
-```
-
-:::::::::::::::::::::::: solution 
-
-## Output
- 
-```output
-[1] "This new lesson looks good"
-```
-
-:::::::::::::::::::::::::::::::::
-
-
-## Challenge 2: how do you nest solutions within challenge blocks?
-
-:::::::::::::::::::::::: solution 
-
-You can add a line with at least three colons and a `solution` tag.
-
-:::::::::::::::::::::::::::::::::
-::::::::::::::::::::::::::::::::::::::::::::::::
-
-## Figures
-
-You can also include figures generated from R Markdown:
-
-```{r pyramid, fig.alt = "pie chart illusion of a pyramid", fig.cap = "Sun arise each and every morning"}
-pie(
-  c(Sky = 78, "Sunny side of pyramid" = 17, "Shady side of pyramid" = 5), 
-  init.angle = 315, 
-  col = c("deepskyblue", "yellow", "yellow3"), 
-  border = FALSE
-)
-```
-
-Or you can use standard markdown for static figures with the following syntax:
-
-`![optional caption that appears below the figure](figure url){alt='alt text for
-accessibility purposes'}`
-
-![You belong in The Carpentries!](https://raw.githubusercontent.com/carpentries/logo/master/Badge_Carpentries.svg){alt='Blue Carpentries hex person logo with no text.'}
-
-## Math
-
-One of our episodes contains $\LaTeX$ equations when describing how to create
-dynamic reports with {knitr}, so we now use mathjax to describe this:
-
-`$\alpha = \dfrac{1}{(1 - \beta)^2}$` becomes: $\alpha = \dfrac{1}{(1 - \beta)^2}$
-
-Cool, right?
-
-::::::::::::::::::::::::::::::::::::: keypoints 
-
-- Use `.md` files for episodes when you want static content
-- Use `.Rmd` files for episodes when you need to generate output
-- Run `sandpaper::check_lesson()` to identify any issues with your lesson
-- Run `sandpaper::build_lesson()` to preview your lesson locally
-
-::::::::::::::::::::::::::::::::::::::::::::::::
-
-[r-markdown]: https://rmarkdown.rstudio.com/
+::: keypoints
+-   Slurm, together with Linux system tools, can help you ensure jobs
+    are utilizing resources effectively.
+-   Slurm job arrays is a neater solution to submitting many similar
+    jobs.
+-   Slurm job dependencies can help you organise pipelines.
+:::
